--- a/albumselector/src/main/AndroidManifest.xml
+++ b/albumselector/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application>
-        <activity android:name=".AlbumActivity" />
+        <activity android:name=".ui.AlbumActivity" />
     </application>
 
 </manifest>
